# ultimate-sitemap-parser

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  LICENSE.txt  MANIFEST.in  Makefile  NOTICE  README.rst  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: 1-site_report.yml  2-bug_report.yml  3-feature_request.yml  config.yml
.github/workflows/: build.yml  lint.yml  publish.yml  test.yml  test_integration.yml
docs/: Makefile  acknowledgements.rst  changelog.rst  conf.py  contributing.rst  get-started.rst  index.rst  modules.rst  usp.objects.rst  usp.rst  usp.web_client.rst
docs/_static/css/: custom.css
docs/extensions/: custom_graphviz.py
docs/guides/: bbc-sitemap.dot  fetch-parse.rst  http-client.rst  parse_flow.dot  performance.rst  saving.rst  security.rst  sitemap-tree.rst
docs/guides/_sitemap_examples/: atom0.3.xml  class-tree.dot  google-news.xml  simple-index.xml  simple-urlset.xml
docs/reference/: cli.rst  formats.rst
docs/reference/api/: index.rst  usp.exceptions.rst  usp.fetch_parse.rst  usp.helpers.rst  usp.objects.page.rst  usp.objects.rst  usp.objects.sitemap.rst  usp.tree.rst  usp.web_client.abstract_client.rst  usp.web_client.requests_client.rst  usp.web_client.rst
docs/reference/formats_examples/: atom1.0.xml  google-image.xml  google-news.xml  hreflang.xml  plaintext.txt  robots.txt  rss2.0.xml
tests/: helpers.py  test_helpers.py  test_tree.py
tests/cli/: conftest.py  test_ls.py  test_root.py
tests/integration/: .gitignore  README.md  conftest.py  download.py  test_integration.py  test_mem.py
tests/integration/cassettes/: .gitignore
tests/tree/: base.py  test_anti_recursion.py  test_basic.py  test_edges.py  test_from_str.py  test_opts.py  test_plain_text.py  test_robots.py  test_rss_atom.py  test_save.py  test_security.py  test_xml.py  test_xml_exts.py
tests/web_client/: test_requests_client.py
usp/: __about__.py  __init__.py  exceptions.py  fetch_parse.py  fetchers.py  helpers.py  log.py  objects.py  tree.py
usp/cli/: __init__.py  _ls.py  _util.py  cli.py
usp/objects/: page.py  sitemap.py
usp/web_client/: abstract_client.py  requests_client.py  test_requests_client.py
