[project]
name = "ultimate-sitemap-parser"
version = "1.6.0"
description = "A performant library for parsing and crawling sitemaps"
authors = [
    { name = "Linas Valiukas", email = "linas@media.mit.edu" },
    { name = "Hal Roberts", email = "hroberts@cyber.law.harvard.edu" },
    { name = "Freddy Heppell", email = "f.heppell@sheffield.ac.uk" },
]
requires-python = ">=3.10"
readme = "README.rst"
license = "GPL-3.0-or-later"
maintainers = [{ name = "Freddy Heppell", email = "f.heppell@sheffield.ac.uk" }]
keywords = [
    "sitemap",
    "crawler",
    "indexing",
    "xml",
    "rss",
    "atom",
    "google news",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Text Processing :: Markup :: XML",
]
dependencies = [
    "python-dateutil (>=2.7,<3.0.0)",
    "requests (>=2.2.1,<3.0.0)",
]

[project.urls]
homepage = "https://ultimate-sitemap-parser.readthedocs.io/"
documentation = "https://ultimate-sitemap-parser.readthedocs.io/"
repository = "https://github.com/GateNLP/ultimate-sitemap-parser"

[project.scripts]
usp = "usp.cli:main"

[dependency-groups]
dev = [
    "requests-mock>=1.6.0,<2.0",
    "pytest>=8.3.0,<9",
    "ruff>=0.11.6,<0.12",
    "vcrpy==6.0.1",
    "pytest-mock>=3.14.0,<4",
]
perf = [
    "pytest-memray>=1.7.0,<2",
    "pyinstrument>=4.7.2,<5",
]
docs = [
    "sphinx>=8.0.2,<9 ; python_version ~= '3.10'",
    "sphinx-autobuild>=2024.4.16,<2025 ; python_version ~= '3.10'",
    "sphinx-design>=0.6.1,<0.7 ; python_version ~= '3.10'",
    "furo>=2024.8.6,<2025 ; python_version ~= '3.10'",
    "sphinxext-opengraph>=0.9.1,<0.10 ; python_version ~= '3.10'",
    "sphinx-copybutton>=0.5.2,<0.6 ; python_version ~= '3.10'",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
default-groups = [
    "dev",
    "perf",
    "docs",
]

[tool.uv.build-backend]
module-name = "usp"
module-root = ""

[tool.ruff]
extend-exclude = ["docs/*"]

[tool.ruff.lint]
select = [
    "E4",  # pycodestyle Import
    "E7",  # pycodestyle Statement
    "E9",  # pycodestyle Runtime
    "F",   # pyflakes
    "UP",  # pyupgrde
    "PT",  # flake8-pytest-style
    "I",   # isort
    "T20", # flake8-print
    "LOG", # flake8-logging
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
    "T20", # Allow print in tests
]

[tool.pytest.ini_options]
junit_suite_name = "ultimate-sitemap-parser"
junit_duration_report = "call"
log_cli = true
log_cli_level = "DEBUG"
filterwarnings = [
    "error::pytest.PytestUnraisableExceptionWarning"
]
